--- a/Vivado_Project/DEMO.sim/sim_1/behav/xsim.dir/testbench_behav/webtalk/usage_statistics_ext_xsim.html
+++ b/Vivado_Project/DEMO.sim/sim_1/behav/xsim.dir/testbench_behav/webtalk/usage_statistics_ext_xsim.html
@@ -4,13 +4,13 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>1909853</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Wed Sep 25 23:43:50 2019</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Thu Sep 26 23:28:55 2019</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>XSIM v2017.2 (64-bit)</TD>
-  <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>529679600a934cb9978650d3013c91f3</TD>
+  <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>fbf0dce8cd0b49d28513958f03846cc1</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>2</TD>
-  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>04b10a69-79e2-49a8-b87d-044623d19c74</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>04b10a69-79e2-49a8-b87d-044623d19c74</TD>
+  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>c7dc336d-c7cd-4519-8a00-d1bb0efd7b05</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>c7dc336d-c7cd-4519-8a00-d1bb0efd7b05</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>FALSE</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>target_device</B></TD><TD>not_applicable</TD>
   <TD BGCOLOR='#DBE5F1'><B>target_family</B></TD><TD>not_applicable</TD>
@@ -20,11 +20,11 @@
 </TR> </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>user_environment</B></TD></TR>
-<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>AMD Ryzen Threadripper 1950X 16-Core Processor </TD>
-  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>3750 MHz</TD>
+<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i7-3770 CPU @ 3.40GHz</TD>
+  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>3400 MHz</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>os_name</B></TD><TD>Microsoft Windows 8 or later , 64-bit</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_release</B></TD><TD>major release  (build 9200)</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>34.000 GB</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>17.000 GB</TD>
   <TD BGCOLOR='#DBE5F1'><B>total_processors</B></TD><TD>1</TD>
 </TR> </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
@@ -43,8 +43,8 @@
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>iteration=1</TD>
     <TD>runtime=1 ms</TD>
-    <TD>simulation_memory=14996_KB</TD>
-    <TD>simulation_time=0.55_sec</TD>
+    <TD>simulation_memory=15016_KB</TD>
+    <TD>simulation_time=1.22_sec</TD>
 </TR><TR ALIGN='LEFT'>    <TD>trace_waveform=true</TD>
 </TR>   </TABLE>
    </TD></TR>
